Bug 289724 - [Mac] Missing progress bar animation in download window. patch from Mark Mentovai <mark@moxienet.com>, r=bryner sr+a=brendan